--- a/README.Rmd
+++ b/README.Rmd
@@ -5,8 +5,10 @@ output:
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, echo = FALSE}
-knitr::opts_chunk$set(
+```{r echo = FALSE}
+library("knitr") 
+
+opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/"
@@ -16,7 +18,7 @@ knitr::opts_chunk$set(
 # RHL30
 
 An R Package for the RHL30 prognostic predictor in relapsed Hodgkin lymphoma
-samples. The predictor was published at:
+(RHL) samples. The predictor was published at:
 
 Chan, F. C. et al. Prognostic Model to Predict Post-Autologous Stem-Cell 
 Transplantation Outcomes in Classical Hodgkin Lymphoma. J Clin Oncol 
@@ -24,50 +26,78 @@ JCO2017727925 (2017) doi:10.1200/JCO.2017.72.7925.
 
 # How to Install
 
-To get the released version from CRAN:
+To install this package, you need to first have the package `devtools` 
+installed, then you run:
 
 ```{r, eval = FALSE}
-install.packages("survutils")
-```
-
-You can also get survutils through conda:
-
-```{bash, eval = FALSE}
-conda install -c fongchun r-survutils
-```
-
-To install the latest developmental version from github:
-
-```{r, eval = FALSE}
-devtools::install_github("tinyheero/survutils")
+devtools::install_github("tinyheero/RHL30")
 ```
 
 # How to use
 
-We will be use the BCCA relapsed hodgkin lymphoma cohort (n=68) from the paper
-as an example of how to generate RHL30 predictor score. The following steps will
-reproduce the scores from the paper. 
+We will be use the BCCA RHL cohort (n=68) from the paper as an example of how to 
+generate RHL30 predictor score. The following steps will reproduce the RHL30 
+scores from the paper. 
 
 First, let's load the RHL30 package and the RHL30 model:
 
 ```{r}
 library("RHL30")
+library("dplyr")
 rhl30_model_df <- get_rhl30_model_coef_df()
 rhl30_model_df
 ```
 
+The model contains a total of 30 genes:
 
-```{r chung_tag}
+* 18 genes that make the model
+* 12 housekeeper genes that are used to normalize the data
+
+Let's load the expression data of the BCCA RHL cohort that is provided as part
+of this package.
+
+```{r}
 hk_genes <- 
-  dplyr::filter(rhl30_model_df, gene_type == "housekeeper") %>%
-  dplyr::pull("gene_name")
+  filter(rhl30_model_df, gene_type == "housekeeper") %>%
+  pull("gene_name")
 
 exprs_file <- 
   system.file("extdata", "bcca_rhl_rhl30_gene_exprs_mat.tsv", package = "RHL30")
 exprs_mat <- load_exprs_mat(exprs_file)
+dim(exprs_mat)
+```
+
+The expression data contains the 30 genes (rows) and 68 samples (columns). Next 
+we calculate the normalizer values for each sample:
+
+```{r}
 sample_normalizer_values <- get_sample_normalizer_value(exprs_mat, hk_genes)
-exprs_mat_norm <- normalize_exprs_mat(exprs_mat, sample_normalizer_values)
-rhl30_df <- get_rhl30_scores_df(exprs_mat_norm, rhl30_model_df)
+```
+
+In the paper, a threshold of 35 was set to exclude poor quality samples. This 
+was done very low normalizer values often lead to very high normalized 
+expression values. We can apply this threshold to eliminate poor quality 
+samples:
+
+```{r}
+high_quality_samples <- 
+  names(sample_normalizer_values[sample_normalizer_values > 35])
+filtered_exprs_mat <- exprs_mat[, high_quality_samples]
+dim(filtered_exprs_mat)
+```
+
+This eliminates 2 poor quality samples leaving us with 66 samples. **Note that
+the sample HL1120 did not receive ASCT and thus was not reported in figure 4 of
+the paper. As such, the final number in figure 4 is 65 samples.**
+
+Let's normalize our expression matrix and generate the RHL30 scores for each
+sample:
+
+```{r}
+filtered_exprs_mat_norm <- 
+  normalize_exprs_mat(filtered_exprs_mat, sample_normalizer_values)
+rhl30_df <- get_rhl30_scores_df(filtered_exprs_mat_norm, rhl30_model_df)
+head(rhl30_df)
 ```
 
 # R Session
