--- a/README.Rmd
+++ b/README.Rmd
@@ -17,8 +17,12 @@ opts_chunk$set(
 
 # RHL30
 
-An R Package for the RHL30 prognostic predictor in relapsed Hodgkin lymphoma
-(RHL) samples. The predictor was published at:
+An R Package for the RHL30 prognostic predictor. The predictor is a gene 
+expression-based prognostic model predicting the outcome of post-autologous 
+stem-cell transplantation (ASCAT) outcome. **It designed to be used on RHL30 
+NanoString expression count data on relapsed Hodgkin lymphoma (RHL) samples**.
+
+The predictor was published at:
 
 Chan, F. C. et al. Prognostic Model to Predict Post-Autologous Stem-Cell 
 Transplantation Outcomes in Classical Hodgkin Lymphoma. J Clin Oncol 
@@ -35,9 +39,9 @@ devtools::install_github("tinyheero/RHL30")
 
 # How to use
 
-We will be use the BCCA RHL cohort (n=68) from the paper as an example of how to 
-generate RHL30 predictor score. The following steps will reproduce the RHL30 
-scores from the paper. 
+We will be using the BCCA RHL30 training cohort from the paper as an example of 
+how to generate RHL30 predictor score. The following steps will reproduce the 
+RHL30 scores from the paper. 
 
 First, let's load the RHL30 package and the RHL30 model:
 
@@ -53,14 +57,15 @@ The model contains a total of 30 genes:
 * 18 genes that make the model
 * 12 housekeeper genes that are used to normalize the data
 
-Let's load the expression data of the BCCA RHL cohort that is provided as part
-of this package.
+The next step is to load the expression data you want to generate RHL30 scores
+on. The expression data should be a tab-separated values file. The first line
+should be a header line with `gene_name` as the first column followed by 
+the sample identifiers. Each row should then be the name of the gene and then
+the respectively raw expression values for each sample. 
+
+The expression data of the [BCCA RHL30 training cohort is provided as an example](https://github.com/tinyheero/RHL30/blob/master/inst/extdata/bcca_rhl_rhl30_gene_exprs_mat.tsv). Let's load that data:
 
 ```{r}
-hk_genes <- 
-  filter(rhl30_model_df, gene_type == "housekeeper") %>%
-  pull("gene_name")
-
 exprs_file <- 
   system.file("extdata", "bcca_rhl_rhl30_gene_exprs_mat.tsv", package = "RHL30")
 exprs_mat <- load_exprs_mat(exprs_file)
@@ -68,14 +73,19 @@ dim(exprs_mat)
 ```
 
 The expression data contains the 30 genes (rows) and 68 samples (columns). Next 
-we calculate the normalizer values for each sample:
+we calculate the normalizer values (geometric mean of the 12 housekeepers) for 
+each sample:
 
 ```{r}
+hk_genes <- 
+  filter(rhl30_model_df, gene_type == "housekeeper") %>%
+  pull("gene_name")
+
 sample_normalizer_values <- get_sample_normalizer_value(exprs_mat, hk_genes)
 ```
 
 In the paper, a threshold of 35 was set to exclude poor quality samples. This 
-was done very low normalizer values often lead to very high normalized 
+was done because very low normalizer values often lead to very high normalized 
 expression values. We can apply this threshold to eliminate poor quality 
 samples:
 
