--- a/README.Rmd
+++ b/README.Rmd
@@ -19,14 +19,14 @@ opts_chunk$set(
 
 An R Package for the RHL30 prognostic predictor. The predictor is a gene 
 expression-based prognostic model for predicting post-autologous stem-cell 
-transplantation (ASCAT) outcomes. **It designed to be used on RHL30 
-NanoString expression count data on relapsed Hodgkin lymphoma (RHL) samples**.
+transplantation outcomes. **It designed to be used on RHL30 NanoString 
+expression count data on relapsed Hodgkin lymphoma (RHL) samples**.
 
 The predictor was published at:
 
-Chan FC*, Mottok A*, et al. Prognostic Model to Predict Post-Autologous Stem-Cell 
-Transplantation Outcomes in Classical Hodgkin Lymphoma. J Clin Oncol 
-JCO2017727925 (2017) doi:10.1200/JCO.2017.72.7925. *Contributed equally to this
+Chan FC\*, Mottok A\*, et al. Prognostic Model to Predict Post-Autologous 
+Stem-Cell Transplantation Outcomes in Classical Hodgkin Lymphoma. J Clin Oncol 
+JCO2017727925 (2017) doi:10.1200/JCO.2017.72.7925. \*Contributed equally to this
 work.
 
 # How to Install
